@@ -41,7 +41,6 @@ import java.nio.charset.StandardCharsets;
 import java.time.Instant;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -53,6 +52,7 @@ import static org.apache.flink.table.api.DataTypes.BINARY;
 import static org.apache.flink.table.api.DataTypes.BOOLEAN;
 import static org.apache.flink.table.api.DataTypes.DECIMAL;
 import static org.apache.flink.table.api.DataTypes.DOUBLE;
+import static org.apache.flink.table.api.DataTypes.FIELD;
 import static org.apache.flink.table.api.DataTypes.INT;
 import static org.apache.flink.table.api.DataTypes.MAP;
 import static org.apache.flink.table.api.DataTypes.ROW;
@@ -62,6 +62,7 @@ import static org.apache.flink.table.api.DataTypes.TIMESTAMP_WITH_LOCAL_TIME_ZON
 import static org.apache.flink.table.api.DataTypes.VARBINARY;
 import static org.apache.flink.table.api.Expressions.$;
 import static org.apache.flink.table.api.Expressions.call;
+import static org.apache.flink.table.api.Expressions.json;
 import static org.apache.flink.table.api.Expressions.jsonArray;
 import static org.apache.flink.table.api.Expressions.jsonObject;
 import static org.apache.flink.table.api.Expressions.jsonString;
@@ -87,10 +88,12 @@ class JsonFunctionsITCase extends BuiltInFunctionTestBase {
         testCases.addAll(jsonQuerySpec());
         testCases.addAll(jsonStringSpec());
         testCases.addAll(jsonObjectSpec());
+        testCases.addAll(jsonSpec());
         testCases.addAll(jsonArraySpec());
         testCases.addAll(jsonQuoteSpec());
         testCases.addAll(jsonUnquoteSpecWithValidInput());
         testCases.addAll(jsonUnquoteSpecWithInvalidInput());
+        testCases.addAll(jsonLocalRefReuseSpec());
         return testCases.stream();
     }
 
@@ -289,11 +292,17 @@ class JsonFunctionsITCase extends BuiltInFunctionTestBase {
                                         "wrong"),
                         "JSON_VALUE(f0, 'strict $.[''contains blank'']' NULL ON EMPTY DEFAULT 'wrong' ON ERROR)",
                         "right",
-                        STRING());
+                        STRING())
+
+                // Multiple JSON_VALUE calls on the same input should reuse parsed JSON
+                .testSqlResult(
+                        "JSON_VALUE(f0, '$.type'), JSON_VALUE(f0, '$.age')",
+                        List.of("account", "42"),
+                        List.of(STRING(), STRING()));
     }
 
     private static List<TestSetSpec> isJsonSpec() {
-        return Arrays.asList(
+        return List.of(
                 TestSetSpec.forFunction(BuiltInFunctionDefinitions.IS_JSON)
                         .onFieldsWithData(1)
                         .andDataTypes(INT())
@@ -364,7 +373,7 @@ class JsonFunctionsITCase extends BuiltInFunctionTestBase {
 
     private static List<TestSetSpec> jsonQuerySpec() {
         final String jsonValue = getJsonFromResource("/json/json-query.json");
-        return Arrays.asList(
+        return List.of(
                 TestSetSpec.forFunction(BuiltInFunctionDefinitions.JSON_QUERY)
                         .onFieldsWithData((String) null)
                         .andDataTypes(STRING())
@@ -596,7 +605,7 @@ class JsonFunctionsITCase extends BuiltInFunctionTestBase {
         multisetData.put("M1", 1);
         multisetData.put("M2", 2);
 
-        return Arrays.asList(
+        return List.of(
                 TestSetSpec.forFunction(BuiltInFunctionDefinitions.JSON_STRING)
                         .onFieldsWithData(0)
                         .testResult(
@@ -613,13 +622,14 @@ class JsonFunctionsITCase extends BuiltInFunctionTestBase {
                                 1.23,
                                 LocalDateTime.parse("1990-06-02T13:37:42.001"),
                                 Instant.parse("1990-06-02T13:37:42.001Z"),
-                                Arrays.asList("A1", "A2", "A3"),
+                                List.of("A1", "A2", "A3"),
                                 Row.of("R1", Instant.parse("1990-06-02T13:37:42.001Z")),
                                 mapData,
                                 multisetData,
                                 "Test".getBytes(StandardCharsets.UTF_8),
                                 "Test".getBytes(StandardCharsets.UTF_8),
-                                Row.of(Collections.singletonList(Row.of(1, 2))))
+                                Row.of(Collections.singletonList(Row.of(1, 2))),
+                                "{\"key\":\"value\"}")
                         .andDataTypes(
                                 STRING().notNull(),
                                 BOOLEAN().notNull(),
@@ -634,7 +644,8 @@ class JsonFunctionsITCase extends BuiltInFunctionTestBase {
                                 MAP(STRING(), INT()).notNull(),
                                 BINARY(4).notNull(),
                                 VARBINARY(4).notNull(),
-                                ROW(ARRAY(ROW(INT(), INT()))).notNull())
+                                ROW(ARRAY(ROW(INT(), INT()))).notNull(),
+                                STRING().notNull())
                         .testResult(
                                 jsonString($("f0")), "JSON_STRING(f0)", "\"V\"", STRING().notNull())
                         .testResult(
@@ -688,7 +699,248 @@ class JsonFunctionsITCase extends BuiltInFunctionTestBase {
                                 jsonString($("f13")),
                                 "JSON_STRING(f13)",
                                 "{\"f0\":[{\"f0\":1,\"f1\":2}]}",
+                                STRING().notNull())
+                        .testResult(
+                                jsonString(call("PARSE_JSON", $("f14"))),
+                                "JSON_STRING(PARSE_JSON('{\"key\":\"value\"}'))",
+                                "{\"key\":\"value\"}",
+                                STRING().notNull()),
+                TestSetSpec.forFunction(BuiltInFunctionDefinitions.JSON_STRING)
+                        .onFieldsWithData(Row.of("val1", "val2", "val3", "val4", "val5"))
+                        .andDataTypes(
+                                ROW(
+                                                FIELD("field\"quote", STRING()),
+                                                FIELD("field\\slash", STRING()),
+                                                FIELD("field\nline", STRING()),
+                                                FIELD("field\ttab", STRING()),
+                                                FIELD("field\rreturn", STRING()))
+                                        .notNull())
+                        .testResult(
+                                jsonString($("f0")),
+                                "JSON_STRING(f0)",
+                                "{\"field\\ttab\":\"val4\",\"field\\nline\":\"val3\",\"field\\rreturn\":\"val5\",\"field\\\"quote\":\"val1\",\"field\\\\slash\":\"val2\"}",
                                 STRING().notNull()));
+    }
+
+    private static List<TestSetSpec> jsonSpec() {
+        return List.of(
+                TestSetSpec.forFunction(BuiltInFunctionDefinitions.JSON_OBJECT)
+                        .onFieldsWithData("{\"key\":\"value\"}", "{\"key\": {\"value\": 42}}")
+                        .andDataTypes(STRING(), STRING())
+                        // Tests for JSON calls inside of JSON_OBJECT
+                        .testResult(
+                                jsonObject(JsonOnNull.NULL, "K", json("{}")),
+                                "JSON_OBJECT(KEY 'K' VALUE JSON('{}'))",
+                                "{\"K\":{}}",
+                                STRING().notNull())
+                        .testResult(
+                                jsonObject(JsonOnNull.NULL, "K", json($("f0"))),
+                                "JSON_OBJECT(KEY 'K' VALUE JSON(f0))",
+                                "{\"K\":{\"key\":\"value\"}}",
+                                STRING().notNull())
+                        .testResult(
+                                jsonObject(JsonOnNull.NULL, "K", json($("f1"))),
+                                "JSON_OBJECT(KEY 'K' VALUE JSON(f1))",
+                                "{\"K\":{\"key\":{\"value\":42}}}",
+                                STRING().notNull())
+                        .testResult(
+                                jsonObject(JsonOnNull.NULL, "K", json("[1,2,3]")),
+                                "JSON_OBJECT(KEY 'K' VALUE JSON('[1,2,3]'))",
+                                "{\"K\":[1,2,3]}",
+                                STRING().notNull())
+                        .testResult(
+                                jsonObject(JsonOnNull.NULL, "K", json("")),
+                                "JSON_OBJECT(KEY 'K' VALUE JSON(''))",
+                                "{\"K\":null}",
+                                STRING().notNull())
+                        .testResult(
+                                jsonObject(JsonOnNull.NULL, "K", json("   ")),
+                                "JSON_OBJECT(KEY 'K' VALUE JSON('    '))",
+                                "{\"K\":null}",
+                                STRING().notNull())
+                        .testResult(
+                                jsonObject(JsonOnNull.NULL, "K", json(nullOf(STRING()))),
+                                "JSON_OBJECT(KEY 'K' VALUE JSON(CAST(NULL AS STRING)) NULL ON NULL)",
+                                "{\"K\":null}",
+                                STRING().notNull())
+                        .testResult(
+                                jsonObject(JsonOnNull.ABSENT, "K", json(nullOf(STRING()))),
+                                "JSON_OBJECT(KEY 'K' VALUE JSON(CAST(NULL AS STRING)) ABSENT ON NULL)",
+                                "{}",
+                                STRING().notNull())
+                        .testResult(
+                                jsonObject(
+                                        JsonOnNull.NULL,
+                                        "key",
+                                        jsonObject(JsonOnNull.NULL, "nested_key", json($("f1")))),
+                                "JSON_OBJECT("
+                                        + "     KEY 'key'"
+                                        + "     VALUE JSON_OBJECT("
+                                        + "         KEY 'nested_key'"
+                                        + "         VALUE JSON(f1)"
+                                        + ") NULL ON NULL)",
+                                "{\"key\":{\"nested_key\":{\"key\":{\"value\":42}}}}",
+                                STRING().notNull())
+                        .testResult(
+                                jsonObject(
+                                        JsonOnNull.NULL,
+                                        "key",
+                                        jsonObject(
+                                                JsonOnNull.NULL,
+                                                "nested_key",
+                                                json(nullOf(STRING())))),
+                                "JSON_OBJECT("
+                                        + "     KEY 'key'"
+                                        + "     VALUE JSON_OBJECT("
+                                        + "         KEY 'nested_key'"
+                                        + "         VALUE JSON(CAST(NULL AS STRING))"
+                                        + ") NULL ON NULL)",
+                                "{\"key\":{\"nested_key\":null}}",
+                                STRING().notNull())
+                        .testSqlValidationError(
+                                "JSON()",
+                                "SQL validation failed. From line 1, column 8 to line 1, column 13: No match found for function signature JSON().")
+                        .testSqlRuntimeError(
+                                "JSON_OBJECT(KEY 'K' VALUE JSON('{'))",
+                                TableRuntimeException.class,
+                                "Invalid JSON string in JSON(value) function")
+                        .testSqlRuntimeError(
+                                "JSON_OBJECT(KEY 'K' VALUE JSON('{'))",
+                                TableRuntimeException.class,
+                                "line: 1, column: 1")
+                        .testTableApiRuntimeError(
+                                jsonObject(JsonOnNull.NULL, "K", json("{")),
+                                TableRuntimeException.class,
+                                "Invalid JSON string in JSON(value) function")
+
+                        // Tests for JSON_OBJECT with multiple parameters
+                        .testResult(
+                                jsonObject(JsonOnNull.NULL, "key1", "val", "key2", json($("f1"))),
+                                "JSON_OBJECT(KEY 'key1' VALUE 'val', KEY 'key2' VALUE JSON(f1))",
+                                "{\"key1\":\"val\",\"key2\":{\"key\":{\"value\":42}}}",
+                                STRING().notNull())
+                        .testResult(
+                                jsonObject(
+                                        JsonOnNull.NULL,
+                                        "key1",
+                                        json($("f0")),
+                                        "key2",
+                                        json($("f1"))),
+                                "JSON_OBJECT(KEY 'key1' VALUE JSON(f0), KEY 'key2' VALUE JSON(f1))",
+                                "{\"key1\":{\"key\":\"value\"},\"key2\":{\"key\":{\"value\":42}}}",
+                                STRING().notNull())
+                        .testResult(
+                                jsonObject(
+                                        JsonOnNull.NULL,
+                                        "outerKey",
+                                        "outerValue",
+                                        "nestedObject",
+                                        jsonObject(JsonOnNull.NULL, "innerKey", json($("f0")))),
+                                "JSON_OBJECT(KEY 'outerKey' VALUE 'outerValue', KEY 'nestedObject' VALUE JSON_OBJECT(KEY 'innerKey' VALUE JSON(f0)))",
+                                "{\"nestedObject\":{\"innerKey\":{\"key\":\"value\"}},\"outerKey\":\"outerValue\"}",
+                                STRING().notNull())
+                        .testResult(
+                                jsonObject(
+                                        JsonOnNull.NULL,
+                                        "p1",
+                                        json($("f0")),
+                                        "p2",
+                                        json($("f1")),
+                                        "p3",
+                                        json("[1, 2, 3]")),
+                                "JSON_OBJECT(KEY 'p1' VALUE JSON(f0), KEY 'p2' VALUE JSON(f1), KEY 'p3' VALUE JSON('[1, 2, 3]'))",
+                                "{\"p1\":{\"key\":\"value\"},\"p2\":{\"key\":{\"value\":42}},\"p3\":[1,2,3]}",
+                                STRING().notNull())
+                        .testSqlValidationError(
+                                "JSON_OBJECT(KEY JSON('{}') VALUE 'value' ABSENT ON NULL)",
+                                "The JSON() function is currently only supported inside JSON_ARRAY() or as the VALUE param of JSON_OBJECT()")
+                        .testTableApiValidationError(
+                                jsonObject(JsonOnNull.NULL, json($("f0")), "value"),
+                                "Invalid function call:\n"
+                                        + "JSON_OBJECT(SYMBOL NOT NULL, STRING, CHAR(5) NOT NULL)")
+                        // Tests for JSON calls inside of JSON_ARRAY
+                        .testResult(
+                                jsonArray(JsonOnNull.NULL, json("{}")),
+                                "JSON_ARRAY(JSON('{}'))",
+                                "[{}]",
+                                STRING().notNull())
+                        .testResult(
+                                jsonArray(JsonOnNull.NULL, json($("f0"))),
+                                "JSON_ARRAY(JSON(f0))",
+                                "[{\"key\":\"value\"}]",
+                                STRING().notNull())
+                        .testResult(
+                                jsonArray(JsonOnNull.NULL, json($("f1"))),
+                                "JSON_ARRAY(JSON(f1))",
+                                "[{\"key\":{\"value\":42}}]",
+                                STRING().notNull())
+                        .testResult(
+                                jsonArray(JsonOnNull.NULL, json("[1,2,3]")),
+                                "JSON_ARRAY(JSON('[1,2,3]'))",
+                                "[[1,2,3]]",
+                                STRING().notNull())
+                        .testResult(
+                                jsonArray(JsonOnNull.NULL, json($("f0")), json("[1,2,3]")),
+                                "JSON_ARRAY(JSON(f0), JSON('[1,2,3]'))",
+                                "[{\"key\":\"value\"},[1,2,3]]",
+                                STRING().notNull())
+                        .testResult(
+                                jsonArray(JsonOnNull.ABSENT, json("")),
+                                "JSON_ARRAY(JSON(''))",
+                                "[]",
+                                STRING().notNull())
+                        .testResult(
+                                jsonArray(JsonOnNull.NULL, json("")),
+                                "JSON_ARRAY(JSON('') NULL ON NULL)",
+                                "[null]",
+                                STRING().notNull())
+                        .testResult(
+                                jsonArray(JsonOnNull.NULL, json(""), json($("f0"))),
+                                "JSON_ARRAY(JSON(''), JSON(f0) NULL ON NULL)",
+                                "[null,{\"key\":\"value\"}]",
+                                STRING().notNull())
+                        .testResult(
+                                jsonArray(JsonOnNull.NULL, json("   ")),
+                                "JSON_ARRAY(JSON('    ') NULL ON NULL)",
+                                "[null]",
+                                STRING().notNull())
+                        .testResult(
+                                jsonArray(JsonOnNull.NULL, json(nullOf(STRING()))),
+                                "JSON_ARRAY(JSON(CAST(NULL AS STRING)) NULL ON NULL)",
+                                "[null]",
+                                STRING().notNull())
+                        .testResult(
+                                jsonArray(JsonOnNull.ABSENT, json(nullOf(STRING()))),
+                                "JSON_ARRAY(JSON(CAST(NULL AS STRING)) ABSENT ON NULL)",
+                                "[]",
+                                STRING().notNull())
+                        .testResult(
+                                jsonArray(
+                                        JsonOnNull.NULL, jsonArray(JsonOnNull.NULL, json($("f1")))),
+                                "JSON_ARRAY(JSON_ARRAY(JSON(f1)))",
+                                "[[{\"key\":{\"value\":42}}]]",
+                                STRING().notNull())
+                        .testResult(
+                                jsonArray(
+                                        JsonOnNull.NULL,
+                                        jsonArray(JsonOnNull.NULL, json(nullOf(STRING())))),
+                                "JSON_ARRAY(JSON_ARRAY(JSON(CAST(NULL AS STRING)) NULL ON NULL) NULL ON NULL)",
+                                "[[null]]",
+                                STRING().notNull())
+                        .testTableApiRuntimeError(
+                                jsonArray(JsonOnNull.NULL, json("{")),
+                                TableRuntimeException.class,
+                                "Invalid JSON string in JSON(value) function")
+                        .testSqlRuntimeError(
+                                "JSON_ARRAY(JSON('{'))",
+                                TableRuntimeException.class,
+                                "line: 1, column: 1")
+                        .testTableApiValidationError(
+                                json($("f0")),
+                                "The JSON() function is currently only supported inside JSON_ARRAY() or as the VALUE param of JSON_OBJECT()")
+                        .testSqlValidationError(
+                                "JSON(f0)",
+                                "The JSON() function is currently only supported inside JSON_ARRAY() or as the VALUE param of JSON_OBJECT()"));
     }
 
     private static List<TestSetSpec> jsonObjectSpec() {
@@ -700,7 +952,7 @@ class JsonFunctionsITCase extends BuiltInFunctionTestBase {
         multisetData.put("M1", 1);
         multisetData.put("M2", 2);
 
-        return Arrays.asList(
+        return List.of(
                 TestSetSpec.forFunction(BuiltInFunctionDefinitions.JSON_OBJECT)
                         .onFieldsWithData(0)
                         .testResult(
@@ -731,7 +983,7 @@ class JsonFunctionsITCase extends BuiltInFunctionTestBase {
                                 1.23,
                                 LocalDateTime.parse("1990-06-02T13:37:42.001"),
                                 Instant.parse("1990-06-02T13:37:42.001Z"),
-                                Arrays.asList("A1", "A2", "A3"),
+                                List.of("A1", "A2", "A3"),
                                 Row.of("R1", Instant.parse("1990-06-02T13:37:42.001Z")),
                                 mapData,
                                 multisetData,
@@ -839,12 +1091,27 @@ class JsonFunctionsITCase extends BuiltInFunctionTestBase {
                                         + "\"R\":{\"f0\":\"V\",\"f1\":null}"
                                         + "}",
                                 STRING().notNull(),
+                                STRING().notNull()),
+                TestSetSpec.forFunction(BuiltInFunctionDefinitions.JSON_OBJECT)
+                        .onFieldsWithData(Row.of("val1", "val2", "val3", "val4", "val5"))
+                        .andDataTypes(
+                                ROW(
+                                                FIELD("field\"quote", STRING()),
+                                                FIELD("field\\slash", STRING()),
+                                                FIELD("field\nline", STRING()),
+                                                FIELD("field\ttab", STRING()),
+                                                FIELD("field\rreturn", STRING()))
+                                        .notNull())
+                        .testResult(
+                                jsonObject(JsonOnNull.NULL, "testRow", $("f0")),
+                                "JSON_OBJECT(KEY 'testRow' VALUE f0 NULL ON NULL)",
+                                "{\"testRow\":{\"field\\ttab\":\"val4\",\"field\\nline\":\"val3\",\"field\\rreturn\":\"val5\",\"field\\\"quote\":\"val1\",\"field\\\\slash\":\"val2\"}}",
                                 STRING().notNull()));
     }
 
     private static List<TestSetSpec> jsonQuoteSpec() {
 
-        return Arrays.asList(
+        return List.of(
                 TestSetSpec.forFunction(BuiltInFunctionDefinitions.JSON_QUOTE)
                         .onFieldsWithData(0)
                         .testResult(
@@ -916,7 +1183,7 @@ class JsonFunctionsITCase extends BuiltInFunctionTestBase {
 
     private static List<TestSetSpec> jsonUnquoteSpecWithValidInput() {
 
-        return Arrays.asList(
+        return List.of(
                 TestSetSpec.forFunction(BuiltInFunctionDefinitions.JSON_UNQUOTE)
                         .onFieldsWithData(0)
                         .testResult(
@@ -1058,7 +1325,7 @@ class JsonFunctionsITCase extends BuiltInFunctionTestBase {
 
     private static List<TestSetSpec> jsonUnquoteSpecWithInvalidInput() {
 
-        return Arrays.asList(
+        return List.of(
                 TestSetSpec.forFunction(BuiltInFunctionDefinitions.JSON_UNQUOTE)
                         .onFieldsWithData(0)
                         .testResult(
@@ -1145,7 +1412,7 @@ class JsonFunctionsITCase extends BuiltInFunctionTestBase {
         multisetData.put("M1", 1);
         multisetData.put("M2", 2);
 
-        return Arrays.asList(
+        return List.of(
                 TestSetSpec.forFunction(BuiltInFunctionDefinitions.JSON_ARRAY)
                         .onFieldsWithData(0)
                         .testResult(
@@ -1175,7 +1442,7 @@ class JsonFunctionsITCase extends BuiltInFunctionTestBase {
                                 1.23,
                                 LocalDateTime.parse("1990-06-02T13:37:42.001"),
                                 Instant.parse("1990-06-02T13:37:42.001Z"),
-                                Arrays.asList("A1", "A2", "A3"),
+                                List.of("A1", "A2", "A3"),
                                 Row.of("R1", Instant.parse("1990-06-02T13:37:42.001Z")),
                                 mapData,
                                 multisetData,
@@ -1261,7 +1528,198 @@ class JsonFunctionsITCase extends BuiltInFunctionTestBase {
                                         + "{\"age\":1,\"name\":\"V\",\"payload\":{\"M1\":\"V1\",\"M2\":\"V2\"}}"
                                         + "]",
                                 STRING().notNull(),
+                                STRING().notNull()),
+                TestSetSpec.forFunction(BuiltInFunctionDefinitions.JSON_ARRAY)
+                        .onFieldsWithData(Row.of("val1", "val2", "val3", "val4", "val5"))
+                        .andDataTypes(
+                                ROW(
+                                                FIELD("field\"quote", STRING()),
+                                                FIELD("field\\slash", STRING()),
+                                                FIELD("field\nline", STRING()),
+                                                FIELD("field\ttab", STRING()),
+                                                FIELD("field\rreturn", STRING()))
+                                        .notNull())
+                        .testResult(
+                                jsonArray(JsonOnNull.NULL, $("f0")),
+                                "JSON_ARRAY(f0 NULL ON NULL)",
+                                "[{\"field\\ttab\":\"val4\",\"field\\nline\":\"val3\",\"field\\rreturn\":\"val5\",\"field\\\"quote\":\"val1\",\"field\\\\slash\":\"val2\"}]",
                                 STRING().notNull()));
+    }
+
+    /** Pins the local-ref / common-sub-expression handling for JSON construction calls. */
+    private static List<TestSetSpec> jsonLocalRefReuseSpec() {
+        return List.of(
+                // Shared JSON(f) inside two JSON_OBJECT projections.
+                TestSetSpec.forFunction(
+                                BuiltInFunctionDefinitions.JSON_OBJECT,
+                                "Shared JSON(f) sub-expression across JSON_OBJECT projections")
+                        .onFieldsWithData("[1,2,3]")
+                        .andDataTypes(STRING())
+                        .testResult(
+                                resultSpec(
+                                        jsonObject(JsonOnNull.NULL, "k1", json($("f0"))),
+                                        "JSON_OBJECT(KEY 'k1' VALUE JSON(f0))",
+                                        "{\"k1\":[1,2,3]}",
+                                        STRING().notNull(),
+                                        STRING().notNull()),
+                                resultSpec(
+                                        jsonObject(JsonOnNull.NULL, "k2", json($("f0"))),
+                                        "JSON_OBJECT(KEY 'k2' VALUE JSON(f0))",
+                                        "{\"k2\":[1,2,3]}",
+                                        STRING().notNull(),
+                                        STRING().notNull()))
+                        .testSqlResult(
+                                "JSON_OBJECT(KEY 'k1' VALUE JSON(f0)),"
+                                        + " JSON_OBJECT(KEY 'k2' VALUE JSON(f0))",
+                                List.of("{\"k1\":[1,2,3]}", "{\"k2\":[1,2,3]}"),
+                                List.of(STRING().notNull(), STRING().notNull())),
+                // Shared JSON_ARRAY(...) inside two JSON_OBJECT projections.
+                TestSetSpec.forFunction(
+                                BuiltInFunctionDefinitions.JSON_OBJECT,
+                                "Shared JSON_ARRAY sub-expression across JSON_OBJECT projections")
+                        .onFieldsWithData(1, 2, 3)
+                        .andDataTypes(INT(), INT(), INT())
+                        .testResult(
+                                resultSpec(
+                                        jsonObject(
+                                                JsonOnNull.NULL,
+                                                "a",
+                                                jsonArray(
+                                                        JsonOnNull.NULL,
+                                                        $("f0"),
+                                                        $("f1"),
+                                                        $("f2"))),
+                                        "JSON_OBJECT(KEY 'a' VALUE JSON_ARRAY(f0, f1, f2))",
+                                        "{\"a\":[1,2,3]}",
+                                        STRING().notNull(),
+                                        STRING().notNull()),
+                                resultSpec(
+                                        jsonObject(
+                                                JsonOnNull.NULL,
+                                                "b",
+                                                jsonArray(
+                                                        JsonOnNull.NULL,
+                                                        $("f0"),
+                                                        $("f1"),
+                                                        $("f2"))),
+                                        "JSON_OBJECT(KEY 'b' VALUE JSON_ARRAY(f0, f1, f2))",
+                                        "{\"b\":[1,2,3]}",
+                                        STRING().notNull(),
+                                        STRING().notNull()))
+                        .testSqlResult(
+                                "JSON_OBJECT(KEY 'a' VALUE JSON_ARRAY(f0, f1, f2)),"
+                                        + " JSON_OBJECT(KEY 'b' VALUE JSON_ARRAY(f0, f1, f2))",
+                                List.of("{\"a\":[1,2,3]}", "{\"b\":[1,2,3]}"),
+                                List.of(STRING().notNull(), STRING().notNull())),
+                // Shared inner JSON_OBJECT inside two outer JSON_OBJECT projections.
+                TestSetSpec.forFunction(
+                                BuiltInFunctionDefinitions.JSON_OBJECT,
+                                "Shared inner JSON_OBJECT across outer JSON_OBJECT projections")
+                        .onFieldsWithData("V")
+                        .andDataTypes(STRING())
+                        .testResult(
+                                resultSpec(
+                                        jsonObject(
+                                                JsonOnNull.NULL,
+                                                "outer1",
+                                                jsonObject(JsonOnNull.NULL, "inner", $("f0"))),
+                                        "JSON_OBJECT(KEY 'outer1' VALUE JSON_OBJECT(KEY 'inner' VALUE f0))",
+                                        "{\"outer1\":{\"inner\":\"V\"}}",
+                                        STRING().notNull(),
+                                        STRING().notNull()),
+                                resultSpec(
+                                        jsonObject(
+                                                JsonOnNull.NULL,
+                                                "outer2",
+                                                jsonObject(JsonOnNull.NULL, "inner", $("f0"))),
+                                        "JSON_OBJECT(KEY 'outer2' VALUE JSON_OBJECT(KEY 'inner' VALUE f0))",
+                                        "{\"outer2\":{\"inner\":\"V\"}}",
+                                        STRING().notNull(),
+                                        STRING().notNull()))
+                        .testSqlResult(
+                                "JSON_OBJECT(KEY 'outer1' VALUE JSON_OBJECT(KEY 'inner' VALUE f0)),"
+                                        + " JSON_OBJECT(KEY 'outer2' VALUE JSON_OBJECT(KEY 'inner' VALUE f0))",
+                                List.of(
+                                        "{\"outer1\":{\"inner\":\"V\"}}",
+                                        "{\"outer2\":{\"inner\":\"V\"}}"),
+                                List.of(STRING().notNull(), STRING().notNull())),
+                // Shared JSON_OBJECT inside two JSON_ARRAY projections.
+                TestSetSpec.forFunction(
+                                BuiltInFunctionDefinitions.JSON_ARRAY,
+                                "Shared JSON_OBJECT inside JSON_ARRAY across projections")
+                        .onFieldsWithData("V")
+                        .andDataTypes(STRING())
+                        .testResult(
+                                resultSpec(
+                                        jsonArray(
+                                                JsonOnNull.NULL,
+                                                jsonObject(JsonOnNull.NULL, "k", $("f0"))),
+                                        "JSON_ARRAY(JSON_OBJECT(KEY 'k' VALUE f0))",
+                                        "[{\"k\":\"V\"}]",
+                                        STRING().notNull(),
+                                        STRING().notNull()),
+                                resultSpec(
+                                        jsonArray(
+                                                JsonOnNull.NULL,
+                                                jsonObject(JsonOnNull.NULL, "k", $("f0"))),
+                                        "JSON_ARRAY(JSON_OBJECT(KEY 'k' VALUE f0))",
+                                        "[{\"k\":\"V\"}]",
+                                        STRING().notNull(),
+                                        STRING().notNull()))
+                        .testSqlResult(
+                                "JSON_ARRAY(JSON_OBJECT(KEY 'k' VALUE f0)),"
+                                        + " JSON_ARRAY(JSON_OBJECT(KEY 'k' VALUE f0))",
+                                List.of("[{\"k\":\"V\"}]", "[{\"k\":\"V\"}]"),
+                                List.of(STRING().notNull(), STRING().notNull())),
+                // Shared JSON(f) inside two JSON_ARRAY projections.
+                TestSetSpec.forFunction(
+                                BuiltInFunctionDefinitions.JSON_ARRAY,
+                                "Shared JSON(f) inside JSON_ARRAY across projections")
+                        .onFieldsWithData("[1,2,3]")
+                        .andDataTypes(STRING())
+                        .testResult(
+                                resultSpec(
+                                        jsonArray(JsonOnNull.NULL, json($("f0"))),
+                                        "JSON_ARRAY(JSON(f0))",
+                                        "[[1,2,3]]",
+                                        STRING().notNull(),
+                                        STRING().notNull()),
+                                resultSpec(
+                                        jsonArray(JsonOnNull.NULL, json($("f0"))),
+                                        "JSON_ARRAY(JSON(f0))",
+                                        "[[1,2,3]]",
+                                        STRING().notNull(),
+                                        STRING().notNull()))
+                        .testSqlResult(
+                                "JSON_ARRAY(JSON(f0)), JSON_ARRAY(JSON(f0))",
+                                List.of("[[1,2,3]]", "[[1,2,3]]"),
+                                List.of(STRING().notNull(), STRING().notNull())),
+                // Shared JSON_OBJECT inside two JSON_STRING projections. JSON_STRING re-serializes
+                // the operand; without dereferencing the local ref it would wrap the already
+                // serialized JSON string a second time.
+                TestSetSpec.forFunction(
+                                BuiltInFunctionDefinitions.JSON_STRING,
+                                "Shared JSON_OBJECT inside JSON_STRING across projections")
+                        .onFieldsWithData("V")
+                        .andDataTypes(STRING())
+                        .testResult(
+                                resultSpec(
+                                        jsonString(jsonObject(JsonOnNull.NULL, "k", $("f0"))),
+                                        "JSON_STRING(JSON_OBJECT(KEY 'k' VALUE f0))",
+                                        "{\"k\":\"V\"}",
+                                        STRING().notNull(),
+                                        STRING().notNull()),
+                                resultSpec(
+                                        jsonString(jsonObject(JsonOnNull.NULL, "k", $("f0"))),
+                                        "JSON_STRING(JSON_OBJECT(KEY 'k' VALUE f0))",
+                                        "{\"k\":\"V\"}",
+                                        STRING().notNull(),
+                                        STRING().notNull()))
+                        .testSqlResult(
+                                "JSON_STRING(JSON_OBJECT(KEY 'k' VALUE f0)),"
+                                        + " JSON_STRING(JSON_OBJECT(KEY 'k' VALUE f0))",
+                                List.of("{\"k\":\"V\"}", "{\"k\":\"V\"}"),
+                                List.of(STRING().notNull(), STRING().notNull())));
     }
 
     // ---------------------------------------------------------------------------------------------
